--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     font-weight: 50;
 }
 
+
 body {
     background-repeat: no-repeat; /* Prevents the background from repeating */
     background-size: cover;
@@ -233,4 +234,20 @@ video {
 }
 h2 {
     color: #ebede9;
+}
+
+
+.banner {
+    padding: 10px 10px 10px 10px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.5); 
+    text-align: center;
+    font-size: 20px;
+    color: aqua;
+}
+
+a {
+    text-align: center;
+    font-size: 20px;
+    color: aqua;
 }
